# varaosabotti

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/varaosabotti/: __main__.py  cli.py  models.py  notifier.py  scraper.py
tests/: conftest.py  test_models.py  test_notifier.py  test_scraper.py
